Zmiany w krzyżowaniu, usunięcie zależności od długości całkowitej w mutacji